tests/specs/npm/cjs_import_dual/check.out
Download http://localhost:4260/@denotest%2fcjs-import-dual
Download http://localhost:4260/@denotest%2fdual-cjs-esm
Download http://localhost:4260/@denotest/cjs-import-dual/1.0.0.tgz
Download http://localhost:4260/@denotest/dual-cjs-esm/1.0.0.tgz
Check file:///[WILDLINE]/cjs_import_dual/main.ts
TS2322 [ERROR]: Type '"cjs"' is not assignable to type '"esm"'.
const kind: "esm" = getKind(); // should cause a type error
      ~~~~
    at file:///[WILDLINE]/cjs_import_dual/main.ts:3:7

error: Type checking failed.
